# project-structure

./: .cz.toml  .dir-locals.el.in  .eleventy.cjs  .env.in  .eslintrc.json  .gitignore  .gitlab-ci.yml  .linthtmlrc.js  .pre-commit-config.yaml  .prettierrc.json  .proselintrc.json  .prospector.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  NEWS-VERSION.rst  NEWS.rst  README.md  README.rst  TODO.rst  docker-compose.override.yml  docker-compose.yml  index.html  jsdocrc.json  logo.png.license  package-lock.json  package.json  pyproject.toml  requirements-build.txt  rollup.config.js  setup.cfg  towncrier.toml  tox.ini  tsconfig.json  web-dev-server.config.js  web-test-runner.config.js
.github/workflows/: build-test-release.yml  build-test.yml
.husky/: commit-msg  pre-commit  pre-merge-commit  pre-push  prepare-commit-msg
.reuse/: dep5
build-host/: Dockerfile  Makefile
dev/: README.md  index.html
docs/: .gitignore  conf.py  contributing.rst  index.html  index.rst  news.rst  prism-okaidia.css  todo.rst
docs-src/: .eleventyignore  _README.md  api.11ty.cjs  docs.css  index.md  install.md
docs-src/_data/: api.11tydata.js
docs-src/_includes/: example.11ty.cjs  footer.11ty.cjs  header.11ty.cjs  nav.11ty.cjs  page.11ty.cjs  relative-path.cjs
docs-src/examples/: index.md  name-property.md
docs/_static/: logo.png.license  logo.svg.license
docs/api/: index.html
docs/examples/: index.html
docs/examples/name-property/: index.html
docs/install/: index.html
newsfragments/: +npm-readme.bugfix.rst  +release.bugfix.rst  +upgrade-requirements.bugfix.rst
requirements/: build.txt.in  devel.txt.in  test.txt.in  user.txt.in
requirements/py310/: build.txt  devel.txt  test.txt  user.txt
requirements/py311/: build.txt  devel.txt  test.txt  user.txt
requirements/py312/: build.txt  devel.txt  test.txt  user.txt
requirements/py37/: build.txt  devel.txt
requirements/py38/: build.txt  devel.txt  test.txt  user.txt
requirements/py39/: build.txt  devel.txt  test.txt  user.txt
src/: index.js  project-structure-element.ts
src/projectstructure/: __init__.py  __main__.py  utils.py
src/pythonprojectstructure/: __init__.py
src/pythonprojectstructure/newsfragments/: upgrade-requirements.bugfix.rst
src/test/: project-structure-element_test.ts
src/ui/: app.js
styles/: .gitignore  code.ini
styles/Vocab/Code/: accept.txt
styles/Vocab/Markup/: accept.txt
styles/config/vocabularies/Code/: accept.txt
styles/config/vocabularies/Markup/: accept.txt
test/: .eslintrc.json  app-test.js  module-test.js  project-structure-test.js  project_structure_test.js
tests/projectstructuretests/: test_projectstructure.py
var-docker/: .gitignore
