# SPDX-FileCopyrightText: 2023 Ross Patterson <me@rpatterson.net>
#
# SPDX-License-Identifier: MIT

[metadata]
# TEMPLATE: Adjust this Python distribution metadata as appropriate for your project:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata
name = project-structure
version = attr: projectstructure._version.version
description = Project structure foundation or template, distribution/package metadata.
url = https://gitlab.com/rpatterson/project-structure
long_description = file: ./README.rst
long_description_content_type = text/x-rst
keywords = template, structure
author = Ross Patterson
author_email = me@rpatterson.net
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    =src
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
# Run-time dependencies for the package itself:
install_requires = file: ./requirements/user.txt.in

[options.packages.find]
where = src

[options.extras_require]
# Libraries and tools used to run the test suite but not needed by end-users:
test = file: ./requirements/test.txt.in
# Development tools not strictly needed by the test suite but that need this
# package/dist and its dependencies to be to be on the same `sys.path`, IOW to be
# importable:
devel = file: ./requirements/devel.txt.in

[tool:pytest]
testpaths = ./tests/projectstructuretests/
filterwarnings =
    error

[coverage:run]
command_line = -m pytest --junit-xml=pytest-junit.xml
branch = True
source_pkgs =
    projectstructure
    projectstructuretests
omit =
    src/projectstructure/_version.py
    **/site-packages/projectstructure/_version.py
[coverage:report]
fail_under = 100
show_missing = True

[flake8]
exclude = src/*/_version.py
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203
aggressive = 3
experimental = true

[pydocstyle]
match = .*\.py
# See `./.prospector.yaml` for reasons behind these ignores:
add_ignore = D212,D203,D200
